# xviewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
example/: CMakeLists.txt  main.cpp  xviewer_demo.cpp  xviewer_demo.h
scripts/: build_release.bat  clean.bat  clean.sh  rebuild_debug.bat  rebuild_debug.sh  rebuild_release.bat  rebuild_release.sh
source/: CMakeLists.txt  xviewer.cpp  xviewer.h
source/app_window/: app_window.cpp  app_window.h  app_window_presenter.cpp  app_window_presenter.h
source/basis/: base_module.cpp  base_module.h  data_types.h  data_types_utils.h  error_code.h  logger.h  status.h  xcolor.h  xdefines.h  xtimer.h
source/camera/: camera_control.h
source/component/: component.cpp  component.h  document.cpp  document.h
source/gl/: colormap.cpp  colormap.h  drawable.h  drawable_container.h  glsl_shader.cpp  glsl_shader.h  make_shared.h  shader_setting.h
source/imgui/: imgui_manager.cpp  imgui_manager.h  imgui_presenter.cpp  imgui_presenter.h
source/ui/: base_layer.h  dock_space_manager.cpp  dock_space_manager.h  spdlog_sink.h
source/utils/: concurrent_map.h  concurrent_queue.h  recent_files.cpp  recent_files.h  split.h  thread.h  xtimer.h  xutils.h
source/viewer/: viewer_context.h
